feature: TRACEFOSS-XXX updated DEPENDENCIES_FRONTEND